Korekty w html, obsługa sprawdzania pól formularza - nie działa, konieczne dalsze pracy przy optymalizacji kodu - pozostawiono komentarze
Zmieniono parametry formularza, przegrupowano inputy pod oddzielne labele, zmieniono tytuł dokumentu, dodano brakujące komentarze/nagłówki, zmieniono button, dokonano licznych zmian w main.js, głównie polegających na implementacji obsłuygi niewypełnienia pól formularza

--- a/css/style.css
+++ b/css/style.css
@@ -9,35 +9,29 @@ h1 {
 }
 
 body {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap; */
     background-color: wheat;
 }
 
 #form {
     width: 75%;
     margin: 0 auto;
-padding: 20px; 
+    padding: 20px;
     background-color: antiquewhite;
 }
 
 .labelGroup {
     display: block;
-   margin-bottom: 20px; 
-  
+    margin-bottom: 20px;
     background-color: antiquewhite;
 }
 
-.opisGroup {
-font-size: 20px;
+.descriptionGroup {
+    font-size: 20px;
 
 }
 
 .inputText {
-  width: 100%;
+    width: 100%;
 }
 
 .options {
